logs/Slang/generated/hdlconv/hdlconvertor_p584.sv.log
name: hdlconvertor_p584
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p584.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p584.sv:3:1: error: language feature not yet supported
covergroup p_cg with function sample(bit a, int x);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p584.sv:5:3: error: expected member
  cross x, a;
  ^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p584.sv:5:10: error: expected expression
  cross x, a;
         ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p584.sv:5:10: error: expected ':'
  cross x, a;
         ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p584.sv:5:10: error: expected ';'
  cross x, a;
         ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p584.sv:5:10: error: expected member
  cross x, a;
         ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p584.sv:5:13: error: expected expression
  cross x, a;
            ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p584.sv:5:13: error: expected ':'
  cross x, a;
            ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p584.sv:8:1: error: use of undeclared identifier 'p_cg'
p_cg cg1 = new;
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p584.sv:8:12: error: language feature not yet supported
p_cg cg1 = new;
           ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p584.sv:10:1: error: language feature not yet supported
property p1;
^~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p584.sv:12:19: error: expected ')'
  @(posedge clk)(a, x = b) ##1 (c, cg1.sample(a, x));
                  ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p584.sv:12:19: error: expected member
  @(posedge clk)(a, x = b) ##1 (c, cg1.sample(a, x));
                  ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p584.sv:13:1: error: expected member
endproperty : p1
^~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p584.sv:13:15: error: 'p1' is not a type
endproperty : p1
              ^~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p584.sv:13:15: error: 'p1' recursively depends on its own definition
endproperty : p1
              ^~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p584.sv:15:21: note: declared here
c1: cover property (p1);
                    ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p584.sv:15:3: error: expected declarator
c1: cover property (p1);
  ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p584.sv:15:21: error: expected ','
c1: cover property (p1);
                    ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p584.sv:15:23: error: expected declarator
c1: cover property (p1);
                      ^
